# containres

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yaml  pyproject.toml
containres/ideaadministrator/: __init__.py  app_context.py  app_main.py  app_props.py  app_protocols.py  app_utils.py
containres/ideaadministrator/app/: aws_service_availability_helper.py  cluster_prefix_list_helper.py  config_generator.py  delete_cluster.py  deployment_helper.py  directory_service_helper.py  installer_params.py  patch_helper.py  shared_storage_helper.py  support_helper.py  values_diff.py  vpc_endpoints_helper.py
containres/ideaadministrator/integration_tests/: cluster_manager_tests.py  run_integ_tests.py  scheduler_tests.py  test_context.py  test_invoker.py  virtual_desktop_controller_tests.py  virtual_desktop_tests_util.py
containres/ideaclustermanager/: __init__.py
containres/ideaclustermanager/app/: app_context.py  app_main.py  app_utils.py  cluster_manager_app.py  web_portal.py
containres/ideaclustermanager/cli/: __init__.py  accounts.py  cli_main.py  cli_utils.py  groups.py  ldap_commands.py  logs.py  module.py  snapshots.py
containres/ideadatamodel/: model_utils.py
containres/ideadatamodel/api/: api_model.py  logging.py
containres/ideadatamodel/app/: app_api.py  app_model.py
containres/ideadatamodel/auth/: auth_api.py  auth_model.py
containres/ideadatamodel/aws/: __init__.py  autoscaling_group.py  cloudformation_stack.py  cloudformation_stack_resources.py  ec2_instance.py  ec2_instance_type.py  ec2_spot_fleet_request_config.py  model.py
containres/ideadatamodel/cluster_resources/: cluster_resources_model.py
containres/ideadatamodel/cluster_settings/: cluster_settings_api.py
containres/ideadatamodel/common/: common_model.py
containres/ideadatamodel/email_templates/: email_templates_api.py  email_templates_model.py
containres/ideadatamodel/exceptions/: exception_utils.py  exceptions.py
containres/ideadatamodel/filesystem/: filesystem_api.py  filesystem_model.py
containres/ideadatamodel/locale/: __init__.py
containres/ideadatamodel/notifications/: notifications_api.py  notifications_model.py
containres/ideadatamodel/projects/: projects_api.py  projects_model.py
containres/ideadatamodel/scheduler/: scheduler_api.py  scheduler_model.py
containres/ideasdk/: __init__.py
containres/ideavirtualdesktopcontroller/: __init__.py
docs/: ContainerMigrationProcess.md  README.md  index.md  mkdocs.yml
docs/adr_theme/: README.md
docs/decisions/: 0000-use-markdown-any-decision-records.md  0001-migrate-res-backend-services-to-containerized-deployment.md  README.md  adr-template.md
docs/diagrams/: index.md
infra/: cluster-config-setup.sh  dcv-broker.Dockerfile  dcv-gateway.Dockerfile  docker-compose.yaml  docs.Dockerfile  python-backend-test.Dockerfile  python-backend.Dockerfile  run-python-backend-app.sh  webapp-dev.Dockerfile  webapp.Dockerfile
infra/terraform/: localstack-deploy.sh
res/requirements/: idea-cluster-manager.in  idea-sdk.txt  idea-virtual-desktop-controller.in  poetry-add.sh
webapp/: .env  package.json
(+302 files in other folders)
