[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A multi-module Python project example"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/yourusername/my_project"
repository = "https://github.com/yourusername/my_project"

[project.authors]
name = "Your Name"
email = "your.email@example.com"

[project.dependencies]
# Add your project dependencies here
numpy = "^1.21"
pandas = "^1.3"

[project.optional-dependencies]
# Add optional dependencies here
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.setuptools]
packages = ["module1", "module2"]
package-dir = {"" = "."}
