[tool.poetry]
name = "containres"
version = "0.1.0"
description = ""
authors = ["Drew Paettie <cazlo@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.13.1"
arrow = "1.3.0"
banal = "1.0.6"
blinker = "1.7.0"
boto3 = "1.34.50"
botocore = "1.34.50"
cacheout = "0.16.0"
certifi = "2024.2.2"
cffi = "1.16.0"
cfn-flip = "1.3.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
commonmark = "0.9.1"
cryptography = "41.0.7"
dataset = "1.6.2"
fastcounter = "1.1.0"
idna = "3.6"
jinja2 = "3.1.3"
jmespath = "1.0.1"
mako = "1.3.2"
markupsafe = "2.1.5"
mypy = "0.991"
mypy-extensions = "1.0.0"
orjson = "3.9.15"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.43"
psutil = "5.9.8"
pycparser = "2.21"
pydantic = "1.10.14"
pygments = "2.17.2"
pyhocon = "0.3.60"
pyjwt = "2.8.0"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
python-dynamodb-lock = "0.9.1"
pytz = "2022.7.1"
pytz-deprecation-shim = "0.1.0.post0"
pyyaml = "6.0.1"
questionary = "1.10.0"
random-password-generator = "2.2.0"
requests = "2.31.0"
requests-aws4auth = "1.2.3"
requests-unixsocket = "0.3.0"
rich = "12.6.0"
s3transfer = "0.10.0"
semver = "2.13.0"
sh = "1.14.3"
shortuuid = "1.0.11"
six = "1.16.0"
sqlalchemy = "1.4.51"
tomli = "2.0.1"
troposphere = "4.6.0"
types-python-dateutil = "2.8.19.20240106"
typing-extensions = "4.10.0"
tzdata = "2024.1"
tzlocal = "4.3.1"
urllib3 = "1.26.18"
validators = "0.22.0"
wcwidth = "0.2.13"
aiofiles = "23.2.1"
sanic = "23.12.1"
sanic-ext = "23.12.0"
sanic-routing = "23.12.0"
supervisor = ">=4.0,<5.0"
python-ldap = ">=3.0,<4.0"
ldappool = ">=3.0,<4.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0,<7.3.0"
pytest-mock = ">=3.0,<4.0"
pytest-cov = ">=4.0,<5.0"
pytest-xdist = ">=3.0,<4.0"
memory-profiler = ">=0.0,<1.0"
defusedxml = ">=0.0,<1.0"
selenium = ">=4.0,<5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "."
]